Minor fixes
- fixed bug with section 2 questions cutting off because max-height of animation was too low.
- Moved results graph and buttons into main box so that they share the white background
- Changed threshold for recommendations to below 50%
- Corrected question ID of question 28 (from 27 to 28)
- Set max scale value of radar chart to always be 100, so that result is more understandable (as out of 100)

--- a/assessementStyles.css
+++ b/assessementStyles.css
@@ -186,7 +186,7 @@ word-break: keep-all;
 }
 .sectionContent {
 transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out, padding 0.5s ease-in-out;
-max-height: 2000px;
+max-height: 99999px;
 overflow: hidden;
 }
 
